# Beatrate

./: README.md
app/: CMakeLists.txt  build.gradle
app/lib/fftw-3.3.9/: CMakeLists.txt
app/src/debug/res/values/: donottranslate.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: beat_detector.c  beatdetect.c  beatdetect.h
app/src/main/java/com/poupa/vinylmusicplayer/: App.java
app/src/main/java/com/poupa/vinylmusicplayer/adapter/: AlbumCoverPagerAdapter.java  CategoryInfoAdapter.java  PlaylistAdapter.java  SearchAdapter.java  SongFileAdapter.java
app/src/main/java/com/poupa/vinylmusicplayer/appshortcuts/: AppShortcutIconGenerator.java
app/src/main/java/com/poupa/vinylmusicplayer/appwidgets/: AppWidgetBig.java  AppWidgetCard.java  AppWidgetClassic.java  AppWidgetSmall.java
app/src/main/java/com/poupa/vinylmusicplayer/auto/: AutoMusicProvider.java
app/src/main/java/com/poupa/vinylmusicplayer/dialogs/: AddToPlaylistDialog.java  BlacklistFolderChooserDialog.java  ChangelogDialog.java  ClearSmartPlaylistDialog.java  CreatePlaylistDialog.java  DeletePlaylistDialog.java  DeleteSongsDialog.java  RemoveFromPlaylistDialog.java  RenamePlaylistDialog.java  ScanMediaFolderChooserDialog.java  SleepTimerDialog.java  SongDetailDialog.java  SongShareDialog.java
app/src/main/java/com/poupa/vinylmusicplayer/discog/: AddSongAsyncTask.java  DB.java  Discography.java
app/src/main/java/com/poupa/vinylmusicplayer/glide/: BlurTransformation.java  VinylColoredTarget.java  VinylGlideExtension.java  VinylGlideModule.java
app/src/main/res/layout/: activity_beatrate_target_rate_settings.xml  activity_song_tag_editor.xml  dialog_file_details.xml  fragment_card_player_playback_controls.xml  target_rate_settings_item_list.xml
app/src/main/res/values/: donottranslate.xml  strings.xml
(+94 files in other folders)
